# structum

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Migration_Path - TODO.md  Migration_Path.md  README.md  ROADMAP.md  TESTING.md  VISION.md  archive.md  mkdocs.yml  packages.toml  publish.sh  pyproject.toml  run-tests.sh
.github/: dependabot.yml  labeler.yml
.github/workflows/: build.yml  lint.yml  main_ci.yml  publish.yml  release-please.yml  tests.yml
.reuse/: dep5
ARCHITECTURE_V3/: DECISIONS.md
ARCHITECTURE_V3/blueprints/: domain_framework_blueprint.md
ARCHITECTURE_V3/diagrams/: plugin_loading_sequence.puml
Structum/: LICENSE  README.md  publish.sh
Structum/.reuse/: dep5
Structum/src/structum/: cli.py
docs/: MIGRATION_0.1_to_0.2.md  ROADMAP.md  api.md  getting-started.md  index.md
docs/architecture/: design-principles.md  index.md  modules.md  v2.md
docs/architecture/v3/: containerization.md  index.md
docs/architecture/v3/diagrams/: structum_layers.puml
docs/cli/: commands.md  index.md
docs/development/: conventions.md  index.md  plugins.md  roadmap.md  testing.md
docs/overrides/: main.html
docs/reference/: api.md  index.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  custom-themes.md  plugins.md  themes.md
scripts/: README.md  build-all.sh  clean-builds.sh  dev-setup.sh  run-tests.sh
src/structum/: __about__.py  __init__.py  __main__.py  cli.py
src/structum/cli/: __init__.py  main.py
src/structum/cli/commands/: __init__.py  archive.py  clean.py  docs.py  info.py  plugins.py  tree.py
src/structum/core/: __init__.py  archive.py  clean.py  config.py  docs.py  icons.py  tree.py  utils.py
src/structum/plugins/: __init__.py  loader.py  registry.py  sample_plugin.py  sdk.py  skeleton.py
src/structum/plugins/sample/: __init__.py  plugin.py
src/structum/plugins/sample/commands/: __init__.py  hello.py
src/structum/plugins/sample/core/: __init__.py  greeting.py
src/structum/plugins/test_greeter/: __init__.py  plugin.py
src/structum/plugins/test_greeter/commands/: __init__.py  main.py
src/structum/plugins/test_greeter/core/: __init__.py  logic.py
src/structum/plugins/test_runner/: __init__.py  plugin.py
src/structum/plugins/test_runner/commands/: __init__.py  main.py
src/structum/plugins/test_runner/core/: __init__.py  logic.py
structum/: .gitignore  README.md  pyproject.toml
structum-core/: pyproject.toml
structum-core/src/structum/cli/: bootstrap.py
structum-core/src/structum/config/: __init__.py
structum-core/src/structum/plugins/: __init__.py  registry.py  skeleton.py
structum-core/src/structum/security/: __init__.py  validator.py
structum-meta/: README.md  pyproject.toml
structum/src/structum/: __about__.py  __init__.py
structum/src/structum/cli/: __init__.py  bootstrap.py
structum/src/structum/monitoring/: __init__.py  health.py  metrics.py
structum/src/structum/plugins/: loader.py  registry.py  sdk.py  skeleton.py  utils.py
structum/src/structum/security/: validator.py
structum/tests/: conftest.py
structum/tests/unit/: test_simple_imports.py  test_version.py
structum_archive/: README.md  pyproject.toml
structum_archive/src/structum_archive/: __about__.py  __init__.py  core.py  plugin.py
structum_archive/tests/: conftest.py
structum_archive/tests/unit/: test_imports.py  test_plugin.py
structum_clean/: README.md  pyproject.toml
structum_clean/src/structum_clean/: __about__.py  __init__.py  core.py  plugin.py
structum_clean/tests/: conftest.py
structum_clean/tests/unit/: test_plugin.py
structum_docs/: README.md  pyproject.toml
structum_docs/src/structum_docs/: __about__.py  __init__.py  core.py  plugin.py
structum_docs/tests/: conftest.py
structum_docs/tests/unit/: test_plugin.py
structum_plugins/: README.md  pyproject.toml
structum_plugins/src/structum_plugins/: __about__.py  __init__.py  plugin.py
structum_plugins/tests/: conftest.py
structum_plugins/tests/unit/: test_plugin.py
structum_tree/: README.md  pyproject.toml
structum_tree/src/structum_tree/: __about__.py  __init__.py  core.py  icons.py  plugin.py  utils.py
structum_tree/tests/: conftest.py
structum_tree/tests/unit/: test_plugin.py
tests/: conftest.py
tests/unit/: conftest.py  test_version.py
tests/unit/cli/: test_main.py
tests/unit/cli/commands/: test_archive_cmd.py  test_clean_cmd.py  test_plugins_cmd.py
tests/unit/core/: test_archive.py  test_clean.py  test_config.py  test_docs.py  test_tree.py  test_utils.py
tests/unit/plugins/: test_loader.py  test_registry.py  test_skeleton.py
