# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 PythonWoods

# Monorepo root configuration for Structum v2.0
# This file provides task automation for the entire monorepo

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "structum-monorepo"
version = "2.0.0a1"
description = "Structum monorepo development tools"
requires-python = ">=3.11"
dependencies = []

# This is a virtual package for task automation only (no code to install)
[tool.hatch.build.targets.wheel]
packages = []

# Hatch environment with dev dependencies
[tool.hatch.envs.default]
dependencies = [
    "build>=1.0.0",
    "hatchling>=1.25",
    "twine>=4.0.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.11",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

# Hatch scripts for monorepo tasks
# Usage: hatch run <script-name>
[tool.hatch.envs.default.scripts]
# Development
setup = "bash scripts/dev-setup.sh"

# Testing
test = "bash scripts/run-tests.sh"
test-verbose = "bash scripts/run-tests.sh --verbose"

# Building
build = "bash scripts/build-all.sh"
clean = "bash scripts/clean-builds.sh"

# Linting & Formatting
lint = [
    "ruff check structum/src structum_*/src",
    "mypy structum/src structum_*/src",
]
format = "ruff format structum/src structum_*/src"
check = [
    "ruff check structum/src structum_*/src",
    "mypy structum/src structum_*/src",
]

# Combined workflows
ci = [
    "clean",
    "test",
    "lint",
    "build",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]
