# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 PythonWoods

# Root monorepo configuration for Structum v2.0
# This file does NOT define a Python package.
# It exists only to orchestrate tooling (Hatch, scripts, CI).

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
    "build>=1.0.0",
    "hatchling>=1.25",
    "twine>=4.0.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.11",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[tool.hatch.envs.default.scripts]
setup = "bash scripts/dev-setup.sh"

test = "bash scripts/run-tests.sh"
test-verbose = "bash scripts/run-tests.sh --verbose"

build = "bash scripts/build-all.sh"
clean = "bash scripts/clean-builds.sh"
publish-all = "bash scripts/publish-all.sh"

lint = [
    "ruff check structum/src structum_*/src",
    "mypy structum/src structum_*/src",
]
format = "ruff format structum/src structum_*/src"
check = [
    "ruff check structum/src structum_*/src",
    "mypy structum/src structum_*/src",
]

ci = [
    "clean",
    "test",
    "lint",
    "build",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]