# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 PythonWoods

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structum"
version = "2.0.0a1"
description = "Enterprise Plugin Framework - Complete bundle with all official plugins"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "PythonWoods", email = "contact@pythonwoods.com" },
]
keywords = [
    "structum",
    "plugin",
    "framework",
    "cli",
    "tree",
    "archive",
    "documentation",
    "mkdocs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

# Meta-package: Depends on core + all official plugins
dependencies = [
    "structum-core>=2.0.0a1",
    "structum_tree>=2.0.0a1",
    "structum_archive>=2.0.0a1",
    "structum_clean>=2.0.0a1",
    "structum_docs>=2.0.0a1",
    "structum_plugins>=2.0.0a1",
]

[project.urls]
Homepage = "https://github.com/pythonwoods/structum"
Documentation = "https://pythonwoods.github.io/structum/"
Repository = "https://github.com/pythonwoods/structum"
"Bug Tracker" = "https://github.com/pythonwoods/structum/issues"

[tool.hatch.build.targets.wheel]
# Meta-package: no Python code, only dependencies and README
only-include = ["README.md"]
